--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@formhero/ggit-fork",
   "description": "Local promise-returning git command wrappers",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "bin": {
     "ggit": "./bin/ggit.js",
@@ -41,7 +41,7 @@
     "q": "2.0.3",
     "quote": "0.4.0",
     "ramda": "0.9.1",
-    "shelljs": "^0.6.0"
+    "shelljs": "0.6.0"
   },
   "devDependencies": {
     "describe-it": "1.7.0",
